2001-12-06  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc: Use old lift when activating eggs object was moved away
	from.

2001-12-05  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Allow talking to NPC in combat if NPC is friendly or
	neutral.
	* effects.cc,effects.h,intrinsics.cc (Projectile_effect): Store
	projectile AND sprite shapes separately so we can test properly
	for explosion at target.

2001-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: added ucxt directories
	* exult.spec.in: added ucc, ucxt, splitshp and shp2pcx to tools 
	subpackage
	* tools/Makefile.am: install splitshp and shp2pcx. Removed references 
	to ucc
	* tools/ucclex.l, tools/uccparse.y: removed
	* usecode/ucxt/*: many changes to automake/autoconf logic. Made ucxt
	installable and make it look for opcodes.txt in EXULT_DATADIR as well

2001-12-05  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.cc, objs/egg.cc, objs/egg.h : Polishing Mirrors
	* Actors.cc : NPC Actors can now kind of activate eggs (only when 
	  stepping). A more global solution is required to all types of Actors
	  will activate fields and mirrors when they move.
	* ChangeLog : Fixing the date on Patrick's last addition

2001-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/Makefile.am: define EXULT_DATADIR when compiling exult_studio
	* mapedit/studio.cc: look for glade file in xmldir, EXULT_DATADIR and
	current dir before giving up

2001-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: GIMP_PLUGIN_PREFIX needs a /plug-ins appended to it
	* exult.spec.in: implement subpackages for exult-tools, exult-studio,
	exult-gimp-plugin. Someone should provide deb equivalents
	* mapedit/Makefile.am: install the GIMP plugin in the right place

2001-12-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Force created NPC's to start with neutral
	alignment.
	* usecode/ucinternal.cc (Usecode_function): Handle '*' in